# flashlstm_poc

./: .gitmodules  CMakeLists.txt  build.sh  build_standalone.sh
flashlstm_v2/: CMakeLists.txt  README.md  build_flashlstm.sh  pyproject.toml
flashlstm_v2/include/: cudnn_reference.hpp  lstm.hpp  mfu_profiler.hpp
flashlstm_v2/playground/: pt_lstm.py  simple_lstm_bwd.py  simple_lstm_fwd.py
flashlstm_v2/python/flashlstm/: __init__.py  _flashlstm_module.cpp  streaming_lstm.py
flashlstm_v2/python/tests/: test_streaming_lstm.py
flashlstm_v2/scripts/: validate_lstm_bwd.py  validate_lstm_fwd.py
flashlstm_v2/src/: cudnn_reference.cpp  gemm.cu  gemm.h  gputx.h  lstm_backward.cu  lstm_forward.cu  main.cu  numeric_utils.cuh  testing.cu
include/flashlstm/: lstm_api.h
python/: benchmark_lstm.py  pyproject.toml  test_lstm.py
scripts/: ensure_cutlass.py
src/: cudnn_runner.cu  cudnn_runner.h  error_checks.h  kernels.cu  lstm.cu  lstm_internal.h  nvtx_profinst.h  run_lstm.cu  tune_projchunksz.cu
